[metadata]
name = SmoothPrint
version = 0.1.1
author = Blauker
author_email = blauker.contact@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Blauker/SmoothPrint
project_urls =
    Bug Tracker = https://github.com/Blauker/SmoothPrint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src